Reset link and submit design corrections

--- a/app/Resources/FOSUserBundle/views/Resetting/request.html.twig
+++ b/app/Resources/FOSUserBundle/views/Resetting/request.html.twig
@@ -9,7 +9,7 @@
           <input type="text" id="username" name="username" required="required" />
       </div>
       <div>
-          <input type="submit" value="{{ 'security.resetting.submit'|trans }}" />
+          <button type="submit" class="button">{{ 'security.resetting.submit'|trans }}</button>
       </div>
   </form>
 </div>
