--- a/app/Resources/FOSUserBundle/views/Security/login.html.twig
+++ b/app/Resources/FOSUserBundle/views/Security/login.html.twig
@@ -35,7 +35,7 @@
         <button type="submit" id="_submit" name="_submit">{{ 'security.login.submit'|trans }}</button>
 
         <div class="form-group">
-          <a href={{ path('fos_user_resetting_request') }}>{{ 'security.login.forgotten_password'|trans }}</a>
+          <a href={{ path('fos_user_resetting_request') }} class="button">{{ 'security.login.forgotten_password'|trans }}</a>
         </div>
 
       </form>
