--- a/app/Resources/views/project/board.html.twig
+++ b/app/Resources/views/project/board.html.twig
@@ -8,13 +8,13 @@
 
 {% block javascripts %}
     {{ parent() }}
-    <script type="text/javascript" src="{{ asset('js/project.js') }}"></script>
+    <script type="text/javascript" src="{{ asset('js/project.js') }}"></script>   
 {% endblock %}
 
 {% block page_title %}{{ 'project.board' | trans }}{% endblock %}
 
 {% block body %}
-    <div id="board">
+    <div id="board" data-enhanced="false">
         <header>
             <a class="button" href="{{ path('report_bug') }}">
                 {{ 'project.feedback.report_bug' | trans }}
@@ -24,9 +24,20 @@
             </a>
         </header>
         <section>
-        {% for status in statuses %}
-            <div class="board-column">
-                <h3>{{ ("project.status." ~ status) | trans }}</h3>
+        {% for status in statuses  %}
+            <div class="board-column" 
+                 {% if mobileTemplate %} 
+                    style="width:100%;"
+                    id="board_col_{{loop.index}}" 
+                 {% endif %} >
+                <h3>{{ ("project.status." ~ status) | trans }}  
+                     {% if feedbacks[status] is defined %} ({{feedbacks[status] | length}}) {% endif %}
+                {% if mobileTemplate %} 
+                   {% if not loop.first %}  <div class="left_arrow" > <a class="button" href="#" onclick="displayNav({{loop.index}},'previous')"> < </a></div> {% endif %}
+                   {% if not loop.last %}  <div class="right_arrow"> <a class="button" href="#" onclick="displayNav({{loop.index}},'next')">></a> </div> {% endif %}
+                {%endif%}
+                </h3>
+         
                 <section {% if is_granted('ROLE_DEVELOPER') %}
                     data-status="{{ status }}"
                     ondrop="drop_handler(event);"
@@ -59,7 +70,13 @@
                     {% endif %}
                 </section>
             </div>
+              <script>
+               {% if not loop.first %} 
+                   var x = document.getElementById('board_col_{{loop.index}}') ;
+                   hide(x) ;
+               {% endif %}
+             </script>
         {% endfor %}
         </section>
-    </div>
+    </div>            
 {% endblock %}
