--- a/web/css/homepage.css
+++ b/web/css/homepage.css
@@ -10,6 +10,11 @@
 
 #description > .actions {
     display: flex;
+    flex-wrap: wrap ;
     align-items: center;
     justify-content: space-around;
+}
+
+#description > .actions > a {
+    margin-bottom: 8px;
 }
