Change buttons color in login forms

--- a/app/Resources/FOSUserBundle/views/Registration/register.html.twig
+++ b/app/Resources/FOSUserBundle/views/Registration/register.html.twig
@@ -33,7 +33,7 @@
       </div>
 
       <div>
-          <button type="submit" id="_submit" />{{ 'security.registration.submit'|trans }}</button>
+          <button type="submit" id="_submit" class="button success">{{ 'security.registration.submit'|trans }}</button>
       </div>
     {{ form_end(form) }}
 
