--- a/app/Resources/FOSUserBundle/views/Security/login.html.twig
+++ b/app/Resources/FOSUserBundle/views/Security/login.html.twig
@@ -32,10 +32,10 @@
           <label for="remember_me">{{ 'security.login.remember_me'|trans }}</label>
         </div>
         <input type="hidden" name="_target_path" value="/dashboard" />
-        <button type="submit" id="_submit" name="_submit">{{ 'security.login.submit'|trans }}</button>
+        <button type="submit" id="_submit" name="_submit" class="button success">{{ 'security.login.submit'|trans }}</button>
 
         <div class="form-group">
-          <a href={{ path('fos_user_resetting_request') }} class="button">{{ 'security.login.forgotten_password'|trans }}</a>
+          <a href={{ path('fos_user_resetting_request') }} class="button warning">{{ 'security.login.forgotten_password'|trans }}</a>
         </div>
 
       </form>
