Fix typo and code style

--- a/web/css/profile.css
+++ b/web/css/profile.css
@@ -1,9 +1,9 @@
-#profil-title {
+#profile-title {
     margin-top: 5%;
     margin-left: 10%;
 }
 
-#profil-window {
+#profile-window {
     border: 2px solid #EFEFEF;
 
     margin-top: 1%;
