--- a/web/css/admin.css
+++ b/web/css/admin.css
@@ -1,4 +1,5 @@
-#servers {
+#servers,
+#labels {
     width: 90%;
     margin:auto;
 }
@@ -7,4 +8,27 @@
     display:flex;
     justify-content: space-between;
     align-items: center;
+}
+
+#labels section li {
+    width: 350px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding-top:5px;
+    padding-bottom: 5px;
+}
+
+#labels section li.form {
+    width: auto;
+}
+
+#labels section li.form > form {
+    display: flex;
+    align-items: center;
+}
+
+#labels section li > div {
+    width: 150px;
+    height: 30px;
 }
