--- a/app/Resources/views/project/feedback.html.twig
+++ b/app/Resources/views/project/feedback.html.twig
@@ -14,12 +14,35 @@
 {% block page_title %}
     <img src="{{ asset('images/icons/' ~ ((feedback.type == 'bug') ? 'bug.png': 'evolution.png')) }}" />
     {{ feedback.title }}
+    <div id="title-button">
+           <a href="{{ path('project_board') }}">
+                <img src="{{ asset('images/icons/previous.png') }}" />
+          </a>
+    </div>
 {% endblock %}
 
 {% block body %}
     <div id="feedback">
         <section>
-            <div class="infos">
+           
+            <div class="feedback-content">
+                <div class="description">
+                    <div class="description-content">
+                    {{ feedback.description | raw }}
+                    </div>
+                    {% if app.user.username is defined and feedback.author.username == app.user.username %}
+                    <div class="description-action">
+                        <img id="edit-description-button" class='description-action-img' src="{{ asset('images/icons/edit.png') }}" onclick="edit_description('{{ feedback.id }}', '{{ feedback.type }}');"/>
+                        <div id="confirm-description-changes">
+                            <img class='description-action-img' src="{{ asset('images/icons/validate.png') }}" onclick="update_description('{{ feedback.id }}', '{{ feedback.type }}');"/>
+                            <img class='description-action-img' src="{{ asset('images/icons/cancel.png') }}" onclick="cancel_update_description('{{ 'project.feedback.confirm_cancel' | trans }}');" />
+                        </div>
+                    </div> 
+                    <div id="description-old"></div>
+                    {% endif %}
+                </div>
+                
+                <div class="infos">
                 <div class="info-card">
                     <em>{{ 'project.feedback.author' | trans }}</em>
                     <strong>{{ feedback.author.username }}</strong>
@@ -39,19 +62,19 @@
                 </div>
                 {% endif %}
             </div>
-            <div class="feedback-content">
-                <div class="description">
-                    {{ feedback.description | raw }}
-                </div>
                 <hr>
                 <div class="comments">
                     {% for comment in feedback.comments %}
-                        <div class="comment">
+                        <div class="comment {% if comment.author.username == feedback.author.username %} speech-bubble-author 
+                        {% else %} speech-bubble {% endif %}">
+                            <div class="author">
+                                {{ comment.author.username }}  
+                                <div class="comment-date">
+                                     - {{ 'project.comment.created_at' | trans({"%date%": comment.createdAt | date('full_date' | trans)} ) }}
+                                </div>
+                            </div>
                             <div class="feedback-content">
                                 {{ comment.content | raw }}
-                            </div>
-                            <div class="author">
-                                {{ comment.author.username }}, {{ 'project.comment.created_at' | trans({"%date%": comment.createdAt | date('full_date' | trans)} ) }}
                             </div>
                         </div>
                     {% endfor %}
@@ -60,19 +83,6 @@
                     <textarea name="comment-content"></textarea>
                     <button onclick="create_comment('{{ feedback.id }}', '{{ feedback.type }}');">{{ 'project.comment.create' | trans }}</button>
                 </div>
-            </div>
-            <div id="action-buttons">
-                <button id="home-button" class="button" onclick="window.location= '{{path('project_board')}}';">
-                    {{ 'project.feedback.home' | trans }}
-                </button>
-                {% if app.user.username is defined and feedback.author.username == app.user.username %}
-                    <button id="edit-description-button" class="button" onclick="edit_description('{{ feedback.id }}', '{{ feedback.type }}');">
-                        {{ 'project.feedback.edit' | trans }}
-                    </button>
-                    <button id="update-description-button" class="button" onclick="update_description('{{ feedback.id }}', '{{ feedback.type }}');">
-                        {{ 'project.feedback.update' | trans }}
-                    </button>
-                {% endif %}
             </div>
         </section>
     </div>
