--- a/web/css/main.css
+++ b/web/css/main.css
@@ -16,6 +16,8 @@ body {
     margin:0px;
     padding-top: 30px;
     padding-left: 100px;
+    justify-content: space-between;
+    padding-right: 20px;
 }
 
 #page-title h1 > img {
@@ -88,6 +90,7 @@ body {
     background: rgba(0,0,0,0.6);
     margin-bottom:10px;
     padding: 10px 20px;
+    margin-right:5px;
 }
 
 .info-card em {
